syntax = "proto3";
package provenance.ibchooks.v1;

option go_package = "github.com/provenance-io/provenance/x/ibchooks/types";

option java_package        = "io.provenance.ibchooks.v1";
option java_multiple_files = true;

// EventIBCHooksParamsUpdated defines the event emitted after updating ibchooks parameters.
message EventIBCHooksParamsUpdated {
  repeated string allowed_async_ack_contracts = 1;
}